<resources>
    <string name="app_name" translatable="false">MarketPro</string>

    <!--Non Upload-->
    <string name="default_notification_channel_id" translatable="false">524a164</string>

    <string name="title_home">Home</string>
    <string name="title_nearby">Stores</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_navigation_settings">Settings</string>


    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>


    <string name="select_categories">Select Categories</string>

    <string name="medical" translatable="false">Medical</string>
    <string name="hospital" translatable="false">Hospital</string>
    <string name="electronic">Electronic</string>
    <string name="generalStore">General Store</string>
    <string name="sweets">Sweets</string>
    <string name="fruite">Fruites</string>
    <string name="vegetable">Vegetables</string>
    <string name="shoes">Shoes</string>
    <string name="cloth" translatable="false">Cloth</string>
    <string name="carpenter">Car Penter</string>
    <string name="farincher">Farincher</string>
    <string name="restaurants">Restaurants</string>
    <string name="school">School</string>
    <string name="stacenary">Stacenary</string>
    <string name="hotel">Hotel</string>
    <string name="temple">Temple</string>
    <string name="tuition_study">Tuition</string>
    <string name="bank" translatable="false">Bank</string>
    <string name="grocery">Grocery</string>
    <string name="mobile">Mobile</string>
    <string name="jewels">Jewels</string>
    <string name="vehicle" translatable="false">Vehicle</string>
    <string name="petrol">Petrol Pump</string>
    <string name="post_office">Post Office</string>
    <string name="railway_station">Railway Station</string>
    <string name="bus_stand" translatable="false">Bus Stand</string>
    <string name="auto" translatable="false">Auto</string>
    <string name="results_found">No Results Found</string>
    <string name="network_status">Good! Connected to Internet</string>
    <string name="network_status_false">Sorry! No internet available</string>
    <string name="back_press">Please click BACK again to exit</string>


    <string name="about_college">As part of its initiative to improve educational system in India, Bennett, Coleman, and
        Co. Ltd. established Bennett University in Greater Noida, Uttar Pradesh. It is a private University which began
        operation in 2016, with academic operation beginning in August 2016.
    </string>

    <string name="campush">The foundation for Bennettent distance from the southern part of Delhi and is located in a
        peaceful locale. Once fully functional, the 68 acre campus of the university is expected to accommodate over
        13,000 students.
    </string>

    <string name="histroy">The University aims to set a benchmark for higher education by introducing new methods of
        teaching, training, and research. The university boasts of Johnson Cornell University and Georgia Institute of
        Technology as its academic partner.
    </string>


    <string name="app_me" translatable="false">Get My College opens doors for numerous opportunities for your future.
    </string>


    <string name="welcome">Language Change Example</string>
    <string name="pref_key_root" translatable="false">pref_root</string>
    <string name="pref_key_language" translatable="false">pref_language</string>
    <string name="language">Language</string>
    <string name="device">Device</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="sign_in">Sign in</string>

    <string name="enter_shop_name">Shop Name</string>
    <string name="shop_registation">Shop Registation</string>
    <string name="shop_email_id">Shop Email ID (Optional)</string>
    <string name="shop_mobile">Shop Mobile</string>
    <string name="shop_address">Shop Address</string>
    <string name="shop_nearst">Shop Nearst</string>
    <string name="shop_time">Shop Time</string>
    <string name="qwner_name">Owner Name</string>
    <string name="owner_email">Owner Email</string>
    <string name="owner_contact">Owner Contact</string>
    <string name="submit">Submit</string>
    <string name="for_shop">For Shop</string>
    <string name="for_ower">For Ower</string>

    <string-array name="languages" translatable="false">
        <item>en-US</item>
        <item>az</item>
        <item>de</item>
        <item>el</item>
        <item>es</item>
        <item>fr</item>
        <item>gd</item>
        <item>hi</item>
        <item>hu</item>
        <item>id</item>
        <item>it</item>
        <item>ja</item>
        <item>ko</item>
        <item>nb</item>
        <item>nl</item>
        <item>pl</item>
        <item>ru</item>
        <item>sv</item>
        <item>th</item>
        <item>uz</item>
        <item>zh-CN</item>
        <item>zh-TW</item>
        <item>zh-HK</item>
        <item>en-GB</item>
        <item>tr</item>
        <item>eu</item>
        <item>he</item>
        <item>pt-BR</item>
        <item>ar</item>
        <item>ro</item>
        <item>mk</item>
        <item>en-AU</item>
        <item>sr</item>
        <item>sk</item>
        <item>cy</item>
        <item>da</item>
    </string-array>


    <string name="login_validation_name">Please enter Name</string>
    <string name="login_validation_email">Please enter email address</string>
    <string name="login_validation_mobile_numbers">Please enter mobile number</string>
    <string name="login_validation_email_valid">Please enter valid email address</string>
    <string name="login_validation_valid_mobile_numbers">Please enter valid mobile number</string>
    <string name="login_validation_password">Please enter your password</string>
    <string name="enter_old_password">Please enter your old password</string>
    <string name="login_validation_valid_password">Passwords must be at least 8 characters long</string>
    <string name="crf_pass">Please enter confirm password</string>
    <string name="crf_pass_valid">Please enter valid confirm password</string>
    <string name="login_forgot_passwords">Forgot Password?</string>
    <string name="enter_new_password">Please enter new Password</string>
    <string name="password_not_match">New password and confirm password must be same</string>
    <string name="login_validation_city">Please enter city/village</string>
    <string name="alert_ok">OK</string>


    <string name="choose_your_shop_color">Choose your shop color</string>
    <string name="add_your_shop_location">Add Your Shop Location</string>
    <string name="todo">todo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>


    <string name="alredy_login">Already a Member?</string>
    <string name="alert_mobile_number">Please Enter Mobile Number</string>
    <string name="alert_valid_mobile_number">Please Enter Valid Mobile Number</string>
    <string name="alert_otp">Please Enter OTP</string>
    <string name="alert_name">Please Enter your Name</string>
    <string name="alert_pasword">Please Enter Password</string>
    <string name="hint_pasword">Enter Password</string>
    <string name="alert_valid_pasword">Please enter valid password</string>
    <string name="alert_confirm_pasword">Please Enter Confirm Password</string>
    <string name="hint_confirm_pasword">Enter Confirm Password</string>
    <string name="alert_valid_confirm_pasword">Please enter valid Confirm password</string>
    <string name="alert_confirm_pasword_not_same">Password and confirm password should be same</string>
    <string name="alert_valid_name">Your name should not be less than 3 charecters</string>
    <string name="alert_valid_otp">Please Enter Valid OTP</string>
    <string name="msg_otp_success">OTP Send Successfully</string>
    <string name="msg_create_account">Register Here</string>
    <string name="msg_mobile_number">Mobile Number</string>
    <string name="msg_verify_otp">verify otp</string>

    <string name="reset_password">Reset Password</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="continue_to_signin">Continue to SignIn</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="otp">OTP</string>
    <string name="send_otp">SEND OTP</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="otp_already_have_an_otp">Already have an OTP?</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="gender">Gender</string>
    <string name="email_id_optional">Email ID (optional)</string>
    <string name="enter_email_id">Enter Email id</string>
    <string name="city_village">City/Village</string>
    <string name="enter_city_or_village">Enter city or village</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="login">Login</string>
    <string name="otp_enter">Please enter OTP</string>
    <string name="enter_otp_valid">Please Enter valid OTP</string>


    <string name="short_label">Short Label</string>
    <string name="long_label">This is Long Label</string>
    <string name="disabled_message">This shortcut is disabled</string>
    <string name="short_label_two">Short Label two</string>
    <string name="long_label_two">This is Long Label two</string>
    <string name="disabled_message_two">This shortcut two is disabled</string>
    <string name="for_vender">For Vender</string>


    <string name="select_language_txt">Select Language</string>
    <string name="continue_txt">CONTINUE</string>

    <string name="tamil_txt" translatable="false">தமிழ்</string>
    <string name="marathi_txt" translatable="false">मराठी</string>
    <string name="oriya_txt" translatable="false">ଓଡ଼ିଆ</string>
    <string name="telugu_txt" translatable="false">తెలుగు</string>
    <string name="malyalam_txt" translatable="false">മലയാളം</string>
    <string name="kannada_txt" translatable="false">ಕನ್ನಡ</string>
    <string name="bengali_txt" translatable="false">বাংলা</string>
    <string name="gujarati_txt" translatable="false">ગુજરાતી</string>
    <string name="english_txt" translatable="false">English</string>
    <string name="hindi" translatable="false">हिंदी</string>
    <string name="assamese" translatable="false">অসমীয়া</string>
    <string name="you_can_change_it_from_app_settings_anytime">You can change it from app settings anytime</string>
    <string name="loading">Loading…</string>
    <string name="city">City</string>
    <string name="mobile_no">Mobile No</string>
    <string name="change_password">Change Password</string>
    <string name="change_language">Change Language</string>
    <string name="help">Help</string>
    <string name="privecy_policy">Privecy policy</string>
    <string name="log_out">Log Out</string>


</resources>
