<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">


    <shortcut
      android:shortcutId="Register Vender"
      android:enabled="true"
      android:icon="@drawable/ic_shopping_bag_active"
      android:shortcutShortLabel="@string/for_vender"
      android:shortcutLongLabel="@string/long_label"
      android:shortcutDisabledMessage="@string/disabled_message">
      <!-- Set Intent and Category -->
        <intent
              android:action="android.intent.action.VIEW"
              android:targetPackage="com.pusauli.user"
              android:targetClass="com.pusauli.user.ui.vender.VenderActivity"
              />
      <category android:name="android.shortcut.conversation"/>
  </shortcut>


    <shortcut
            android:shortcutId="Profile"
            android:enabled="true"
            android:icon="@drawable/ic_profile"
            android:shortcutShortLabel="@string/title_profile"
            android:shortcutLongLabel="@string/long_label"
            android:shortcutDisabledMessage="@string/disabled_message">
        <!-- Set Intent and Category -->
        <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.pusauli.user"
                android:targetClass="com.pusauli.user.ui.dashboard.MainActivity"
                />
        <category android:name="android.shortcut.conversation"/>
    </shortcut>



</shortcuts>