<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_get_started_02" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_54sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_create_account"
                    android:textColor="@color/dark_blue_text"
                    android:textSize="@dimen/_20ssp" />


            <!--Enter Mobile Number-->
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/msg_mobile_number"
                    android:textColor="@color/dark_blue_text"
                    android:textSize="13sp" />

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_12sdp">

                <TextView
                        android:id="@+id/tv_nine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:text="+91"
                        android:textSize="@dimen/_10ssp" />

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_25sdp"
                        android:layout_toEndOf="@+id/tv_nine"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_mobile_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/color_divider"
                            android:enabled="false"
                            android:hint="@string/enter_mobile_number"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:paddingBottom="@dimen/_14sdp"
                            android:textSize="13sp"
                            app:passwordToggleEnabled="true" />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <!--Enter OTP -->
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/otp"
                    android:textColor="@color/dark_blue_text"
                    android:textSize="13sp"
                    tools:ignore="RtlSymmetry" />

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edi_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_otp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/color_divider"
                        android:hint="@string/alert_otp"
                        android:inputType="numberPassword"
                        android:maxLength="6"
                        android:maxLines="1"
                        android:paddingEnd="@dimen/_14sdp"
                        android:textSize="13sp"
                        app:passwordToggleEnabled="true"
                        tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:id="@+id/txt_resend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/resend_otp"
                    android:textColor="@color/blue" />

        </LinearLayout>


    </LinearLayout>


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:paddingStart="@dimen/_30sdp"
            android:paddingEnd="@dimen/_30sdp"
            android:paddingBottom="@dimen/_18sdp">

        <Button
                android:id="@+id/btn_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/bg_dashboard_btn"
                android:gravity="center"
                android:onClick="btnOtpVerify"
                android:text="@string/msg_verify_otp"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp" />


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_registration"
                android:gravity="center">

            <TextView
                    android:id="@+id/tv_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/alredy_login" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_toEndOf="@+id/tv_message"
                    android:onClick="alreadyLogin"
                    android:text="@string/login"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>
