<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:background="#f812d7c7">

        <LinearLayout
                android:background="#f812d7c7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <FrameLayout
                    android:id="@+id/fre"
                    android:layout_width="match_parent"
                    android:layout_height="250dp">

                <ImageView
                        android:id="@+id/imgBack"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_arrow_back"
                        android:contentDescription="TODO"/>


                <RelativeLayout

                        android:layout_gravity="right|bottom"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:id="@+id/back_img_btn"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="TODO"
                            app:srcCompat="@drawable/ic_attachment"/>

                </RelativeLayout>


            </FrameLayout>


            <android.support.v7.widget.CardView
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp">


                    <TextView
                            android:layout_marginTop="15dp"
                            style="@style/edit_text"
                            android:text="@string/for_shop"
                            android:textColor="#61ac16"
                            android:textStyle="bold"
                            android:textSize="20sp"
                    />

                    <TextView
                            android:layout_marginTop="@dimen/_12ssp"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="bold"
                            android:text="Your Shop Registation No"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:id="@+id/vender_shop_reg"
                            android:layout_marginTop="@dimen/_2ssp"
                            android:textSize="@dimen/_12ssp"
                            android:textStyle="bold"
                            android:textColor="@color/blue"
                            tools:text="54345676"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                  <TextView
                            android:layout_marginTop="@dimen/_12ssp"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="bold"
                            android:text="Your Category"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:id="@+id/vender_shop_category"
                            android:layout_marginTop="@dimen/_2ssp"
                            android:textSize="@dimen/_12ssp"
                            android:textStyle="bold"
                            android:textColor="@color/blue"
                            tools:text="Hospital"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>


                    <android.support.design.widget.TextInputLayout
                            android:layout_marginTop="5dp"
                            style="@style/edit_text">

                        <EditText
                                style="@style/edit_text"
                                android:layout_marginTop="5dp"
                                android:id="@+id/edit_shopName"
                                android:inputType="textMultiLine"
                                android:hint="@string/enter_shop_name"/>

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                            style="@style/edit_text">
                        <EditText
                                android:id="@+id/edit_shopEmail"
                                style="@style/edit_text"
                                android:hint="@string/shop_email_id"
                                android:inputType="textEmailAddress"
                        />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                            style="@style/edit_text">
                        <EditText
                                android:id="@+id/edit_shopMobile"
                                style="@style/edit_text"
                                android:hint="@string/shop_mobile"
                                android:inputType="number"
                                android:maxLength="10"
                        />
                    </android.support.design.widget.TextInputLayout>


                    <Button
                            style="@style/btn_styles"
                            android:id="@+id/btn_location"
                            android:text="@string/add_your_shop_location"/>


                    <android.support.design.widget.TextInputLayout
                            android:layout_marginTop="@dimen/_10sdp"
                            style="@style/edit_text">
                        <EditText
                                android:id="@+id/edit_shopAddress"
                                style="@style/edit_text"
                                android:hint="@string/shop_address"
                                android:inputType="textMultiLine"
                        />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                            style="@style/edit_text">
                        <EditText
                                android:id="@+id/edit_shopNearst"
                                style="@style/edit_text"
                                android:hint="@string/shop_nearst"
                        />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                            style="@style/edit_text">
                        <EditText
                                android:id="@+id/edit_pincode"
                                style="@style/edit_text"
                                android:inputType="number"
                                android:maxLength="6"
                                android:hint="Enter pin code"
                        />
                    </android.support.design.widget.TextInputLayout>


                    <Button
                            android:layout_marginBottom="@dimen/_40sdp"
                            style="@style/btn_styles"
                            android:id="@+id/btn_view_color"
                            android:text="@string/choose_your_shop_color"/>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp">


                    <TextView
                            android:layout_marginTop="15dp"
                            style="@style/edit_text"
                            android:text="@string/for_ower"
                            android:textColor="#61ac16"
                            android:textStyle="bold"
                            android:textSize="20sp"
                    />


                    <android.support.design.widget.TextInputLayout
                            style="@style/edit_text">
                        <EditText
                                android:layout_marginTop="5dp"
                                android:id="@+id/edit_ownerName"
                                style="@style/edit_text"
                                android:hint="@string/qwner_name"
                        />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                            style="@style/edit_text">
                        <EditText
                                android:id="@+id/edit_ownerEmail"
                                style="@style/edit_text"
                                android:hint="@string/owner_email"
                                android:inputType="textEmailAddress"
                        />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                            style="@style/edit_text">
                        <EditText
                                android:id="@+id/edit_ownerContact"
                                style="@style/edit_text"
                                android:hint="@string/owner_contact"
                                android:inputType="number"
                                android:maxLength="10"
                                android:layout_marginBottom="15dp"
                        />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <Button
                    android:id="@+id/btn_submit"
                    android:layout_marginBottom="30dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:padding="5dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/orange"
                    android:textSize="15sp"
                    android:text="@string/submit"
                    android:textColor="#fff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>


    </ScrollView>
    <ProgressBar
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:id="@+id/pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</RelativeLayout>